<resources>
    <string name="app_name">Lify Wellness</string>
    <string name="language_auto">自動</string>
    <string name="language_traditional">繁體</string>
    <string name="language_en">ENGLISH</string>
    <string name="dialog_title">Please Select Color</string>
    <string name="dialog_positive">確定</string>
    <string name="dialog_negative">取消</string>
    <string name="facebook_app_id">630899240681105</string>
    <string name="my_zw">繁體中文</string>
    <string name="my_yw">英文</string>
    <string name="my_all">全部評論</string>
    <string name="login_tv_login">登錄</string>
    <string name="login_tv_regist">創建帳號</string>
    <string name="login_tv_regist2">創建帳號</string>
    <string name="login_tv_welcom">你好！歡迎來到LIFY</string>
    <string name="login_et_user">手機號或郵箱</string>
    <string name="login_tv_forget">忘記密碼</string>
    <string name="login_tv_rem">記住密碼</string>
    <string name="login_et_pass">密碼</string>
    <string name="login_et_pass1">確認密碼</string>
    <string name="login_tv_clause1">通過登錄你同意Lify的<font color='#454545'>《隱私政策和條款》</font></string>
    <string name="login_tv_regist1">沒有帳號?<font color='#454545'>創建一個</font></string>
    <string name="login_tv_third">三方登錄</string>
    <string name="regist_tv_welcom">現在創建您的LIFY賬號</string>
    <string name="regist_et_nick">名稱</string>
    <string name="login_et_code">輸入驗證碼</string>
    <string name="login_bt_getcode">獲取驗證碼</string>
    <string name="login_bt_regist">注冊</string>
    <string name="register_toa_name">請輸入姓名</string>
    <string name="register_toa_pass">請輸入密碼</string>
    <string name="register_toa_passlen">密碼位數應該大於6小於16</string>
    <string name="register_toa_zh">请输入手机号或邮箱</string>
    <string name="register_toa_cx">重新發送</string>
    <string name="menu_tea">首頁</string>
    <string name="menu_equ">設備</string>
    <string name="menu_sq">社區</string>
    <string name="menu_sc">商城</string>
    <string name="menu_wd">我的</string>
    <string name="encourage_bt_in">進入</string>
    <string name="equ_xq_title">設備詳情</string>
    <string name="equ_xq_name">設備名稱</string>
    <string name="equ_xq_name1">修改設備名稱</string>
    <string name="equ_xq_inform">通知</string>
    <string name="equ_xq_state">狀態</string>
    <string name="equ_xq_light">燈光設置</string>
    <string name="equ_xq_day">清洗周期</string>
    <string name="equ_xq_clean">清洗設備</string>
    <string name="equ_xq_cleanxq">是否清洗設備</string>
    <string name="equ_xq_mr1">恢復默認</string>
    <string name="equ_xq_mrxq">是否恢復默認</string>
    <string name="equ_xq_delt">刪除</string>
    <string name="equ_xq_add">添加設備</string>
    <string name="equ_dia_del">取消</string>
    <string name="equ_dia_esure">確定</string>
    <string name="equ_dia_esure1">確定</string>
    <string name="equ_xq_deltitle">刪除設備</string>
    <string name="equ_xq_tistitle">是否刪除該設備</string>
    <string name="equ_xq_delmethod">刪除方法</string>
    <string name="equ_xq_methodtitle">是否刪除該方法</string>
    <string name="equ_xq_online">在線</string>
    <string name="equ_xq_outline">離線</string>
    <string name="equ_xq_dg">休眠</string>
    <string name="equ_xq_xm">待機</string>
    <string name="equ_xq_waterf">充足</string>
    <string name="equ_xq_waters">不足</string>
    <string name="equ_xq_ishot">預熱完成</string>
    <string name="equ_xq_nohot">正在預熱</string>
    <string name="equ_xq_hot1">未預熱</string>
    <string name="equ_xq_cp">沖泡</string>
    <string name="equ_xq_qx">清洗中</string>
    <string name="equ_xq_qxwc">清洗完成</string>
    <string name="equ_xq_jb">警報</string>
    <string name="equ_xq_sj">昇級中</string>
    <string name="equ_xq_star">開始沖泡</string>
    <string name="equ_xq_buy">去購買</string>
    <string name="equ_xq_buy1">去購買</string>
    <string name="equ_xq_method">沖泡方法</string>
    <string name="equ_xq_yc">益處</string>
    <string name="equ_xq_pl">配料</string>
    <string name="equ_xq_kw">口味</string>
    <string name="equ_add_xq">配對教程</string>
    <string name="equ_add_wifi">WiFi名稱</string>
    <string name="equ_add_wifipass">輸入WiFi密碼</string>
    <string name="equ_add_add">配置</string>
    <string name="equ_add_wifi1">Wi-Fi添加</string>
    <string name="equ_add_wifimes1">1、首先，確保你的設備是開機的。</string>
    <string name="equ_add_wifimes2">2、然後按住前面按鈕5秒，直到前面面板LED灯開始變亮。</string>
    <string name="equ_add_wifimes3">3、輸入WiFi名稱和密碼。不支持5GHz ，請切換到其他網絡。</string>
    <string name="equ_add_wifimes5">4、按開始配置按鈕。</string>
    <string name="equ_xq_mrequ">默認設備</string>
    <string name="equ_xq_mrequ1">是否設為默認設備</string>
    <string name="equ_xq_informs">啟用或禁用通知</string>
    <string name="equ_xq_finish">沖泡完成</string>
    <string name="equ_xq_yrfinish">預熱完成時</string>
    <string name="equ_xq_water">水量不足時</string>
    <string name="equ_xq_full">膠囊廢盒已滿時</string>
    <string name="equ_xq_wash">清洗周期已到時</string>
    <string name="equ_xq_jbz">准备中</string>
    <string name="equ_xq_jpz">浸泡中</string>
    <string name="equ_xq_cpz">沖泡中</string>
    <string name="equ_xq_stopjp">停止沖泡</string>
    <string name="equ_xq_cpwc">沖泡完成</string>
    <string name="equ_xq_sc">收藏</string>
    <string name="equ_xq_fx">分享</string>
    <string name="equ_xq_xg">修改</string>
    <string name="equ_xq_hdmr">回到默認</string>
    <string name="equ_xq_temp">溫度</string>
    <string name="equ_xq_time">浸泡時間</string>
    <string name="equ_xq_mr">設置為默認沖泡設備</string>
    <string name="equ_xq_lb">設備列表</string>
    <string name="equ_xq_cg">复制成功</string>
    <string name="share">請選擇一個郵件應用</string>
    <string name="shareTo">茶的信息</string>
    <string name="equ_light_light">光的顏色</string>
    <string name="equ_light_mode">模式</string>
    <string name="equ_light_cz">重置為默認</string>
    <string name="equ_light_lightset">燈光顏色設置</string>
    <string name="equ_mode_1">呼吸</string>
    <string name="equ_mode_2">隨機</string>
    <string name="equ_mode_3">常在</string>
    <string name="equ_mode_ld">亮度</string>
    <string name="equ_wash_1">根據使用次數來清洗設備</string>
    <string name="equ_wash_2">沖泡次數</string>
    <string name="equ_wash_3">保存</string>
    <string name="equ_wash_4">次</string>
    <string name="social_circle_title">圈子</string>
    <string name="social_circle_new">新聞提要</string>
    <string name="social_circle_message">消息</string>
    <string name="social_inform_title">通知</string>
    <string name="social_inform_add">請求添加你為好友</string>
    <string name="social_inform_addfinish">對方已添加你為好友</string>
    <string name="social_inform_esure">接受</string>
    <string name="social_friend_list">好友列表</string>
    <string name="social_friend_add">添加好友</string>
    <string name="social_friend_search">搜索昵稱或ID</string>
    <string name="social_friend_add1">添加</string>
    <string name="social_friend_publish">發佈</string>
    <string name="social_friend_star">輸入想要發佈的內容</string>
    <string name="social_friend_talk">輸入想說的內容</string>
    <string name="social_friend_addmes">請求添加你為好友</string>
    <string name="social_friend_js">接受</string>
    <string name="social_friend_ytj">已添加</string>
    <string name="social_friend_send">發送驗證</string>
    <string name="social_friend_send1">發送</string>
    <string name="social_friend_all">全部評論</string>
    <string name="social_friend_wo">我是</string>
    <string name="social_friend_del">刪除好友</string>
    <string name="social_friend_del1">是否刪除好友</string>
    <string name="social_circle_talk">說點什麼...</string>
    <string name="my_power_title">您的Lify分数</string>
    <string name="my_power_title2">成績明細</string>
    <string name="my_power_title1">你的身體是不平衡的，希望你愛護自己的身體</string>
    <string name="my_power_s1">身體狀況</string>
    <string name="my_power_s2">生活習慣</string>
    <string name="my_power_s3">飲食習慣</string>
    <string name="my_power_s4">情緒管理</string>
    <string name="my_power_button">查看推薦茶</string>
    <string name="my_power_day">日</string>
    <string name="my_power_week">周</string>
    <string name="my_power_weeks">周</string>
    <string name="my_power_month">月</string>
    <string name="my_power_dw">單位</string>
    <string name="main_home_page">首頁</string>
    <string name="main_home_hello">您好!</string>
    <string name="my_power_know">健康知識</string>
    <string name="main_home_title">為了更好地為您推薦適合的個人茶飲計劃，請您填寫問卷單。</string>
    <string name="my_power_tea1">草本系列</string>
    <string name="my_power_tea2">水果系列</string>
    <string name="my_power_tea3">功能茶</string>
    <string name="my_power_tea4">個人計劃</string>
    <string name="main_home_zs">早安,</string>
    <string name="main_home_zw">午安,</string>
    <string name="main_home_ws">晚安,</string>
    <string name="main_home_wj1">Lify Score透過互動的測驗為您貼心推薦個人化的茶飲套餐,建議每個月最小做一次測驗。</string>
    <string name="main_home_wj2">與我們的營養專家一起,我們採取一個全面的方法來了解你的身體,思想和習慣,找出我們可以改善你的健康。建議每月定期參加考試。</string>
    <string name="main_home_wj3"> 次,本月參加問卷測試次數</string>
    <string name="main_home_wjcs">開始測試</string>
    <string name="main_home_error1">水位不足</string>
    <string name="main_home_error2">清空废盒</string>
    <string name="main_home_error3">清洗周期</string>
    <string name="my_healthplan">健康計劃</string>
    <string name="my_health">我的健康能量指標</string>
    <string name="my_plan">我的個人計劃</string>
    <string name="my_issue">我的發布</string>
    <string name="my_ask">我的問卷記錄</string>
    <string name="my_setting">設置</string>
    <string name="my_today">今日目標</string>
    <string name="my_today1">每日沖泡:</string>
    <string name="my_teanum">茶飲量</string>
    <string name="my_plannum">計劃</string>
    <string name="my_friendnum">好友</string>
    <string name="my_drink">飲料</string>
    <string name="my_like">我的最愛</string>
    <string name="my_now">最近的</string>
    <string name="my_problem">输入想说的内容</string>
    <string name="plan_title">我的個人計劃</string>
    <string name="plan_tz">設置提醒</string>
    <string name="plan_tz1">计划通知</string>
    <string name="plan_time">提醒時間</string>
    <string name="buyplan_health">健康計畫</string>
    <string name="buyplan_about">關於</string>
    <string name="buyplan_td">特點</string>
    <string name="buyplan_yys">營養師認證</string>
    <string name="buyplan_tea">計畫茶</string>
    <string name="add">添加</string>
    <string name="added">已添加</string>
    <string name="set_name">賬號</string>
    <string name="set_pass">更改密碼</string>
    <string name="set_pass_y">原密碼</string>
    <string name="set_pass_x">新密碼</string>
    <string name="set_pass_q">確認密碼</string>
    <string name="set_pass_ynull">原密碼不能為空</string>
    <string name="set_pass_xnull">新密碼不能為空</string>
    <string name="set_pass_qnull">確認密碼不能為空</string>
    <string name="set_pass_notsame">兩次密碼不能為空</string>
    <string name="set_pass_addy">填寫原密碼</string>
    <string name="set_pass_addx">填寫新密碼</string>
    <string name="set_pass_addq">再次確認</string>
    <string name="set_out">退出登錄</string>
    <string name="set_mess">消息提醒</string>
    <string name="set_person">用戶反饋</string>
    <string name="set_update">版本更新</string>
    <string name="set_clean">清除緩存</string>
    <string name="set_now">當前版本：</string>
    <string name="set_tk">條款及細則</string>
    <string name="set_hk">確認清理緩存？</string>
    <string name="set_yy">語言</string>
    <string name="set_upapp">版本更新</string>
    <string name="set_upapp1">是否更新版本？</string>
    <string name="drink_unit">杯</string>
    <string name="drink_units">單位（杯）</string>
    <string name="drink_set">設置目標</string>
    <string name="drink_reminder">提醒時間</string>
    <string name="drink_num">沖泡次數</string>
    <string name="drink_cup1">杯體積</string>
    <string name="drink_cup2">小杯</string>
    <string name="drink_cup3">大杯</string>
    <string name="drink_size1">約200ml</string>
    <string name="drink_size2">約300ml</string>
    <string name="drink_save">保存設置</string>
    <string name="drink_method">沖泡列表</string>
    <string name="drink_makemethod">沖泡方法</string>
    <string name="adress_xz">選擇地址</string>
    <string name="adress_hot">熱門國家/地區</string>
    <string name="adress_country">所有國家</string>
    <string name="adress_hot_1">中國</string>
    <string name="adress_hot_2">美國</string>
    <string name="adress_hot_4">中國香港</string>
    <string name="adress_hot_7">中國澳門</string>
    <string name="adress_hot_8">英國</string>
    <string name="adress_hot_10">中國台灣</string>
</resources>