<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_power_fh"
        android:layout_below="@+id/tv_main_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        android:src="@mipmap/login_back"
        />


    <TextView
        android:id="@+id/tv_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equ_add_wifi1"
        android:layout_below="@+id/iv_power_fh"
        android:layout_marginLeft="20dp"
        android:textSize="30sp"
        android:textColor="@color/login_black"
        />

    <EditText
        android:id="@+id/et_add_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_power"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/equ_add_wifi"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        android:textColorHint="#bbbbbb"
        />

    <EditText
        android:id="@+id/et_add_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_add_name"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/equ_add_wifipass"
        android:paddingLeft="20dp"
        android:textSize="14sp"
        android:textColorHint="#bbbbbb"
        />
    <LinearLayout
        android:id="@+id/li_device_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_add_pass"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/device_ask"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/tv_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equ_add_xq"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="#333333"
        android:layout_marginLeft="10dp"
        />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_add_mes1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#777777"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/li_device_ask"
        android:layout_marginTop="60dp"
        android:text="@string/equ_add_wifimes1"
        />
    <TextView
        android:id="@+id/tv_add_mes2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#777777"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/tv_add_mes1"
        android:text="@string/equ_add_wifimes2"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/tv_add_mes3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#777777"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/tv_add_mes2"
        android:text="@string/equ_add_wifimes3"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_add_mes5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#777777"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/tv_add_mes3"
        android:text="@string/equ_add_wifimes5"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/bt_device_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="50dp"
        android:text="@string/equ_add_add"
        android:textColor="@color/white"
        android:paddingBottom="11dp"
        android:textSize="16sp"
        />

</RelativeLayout>
