<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_address_main"
    android:background="@drawable/answer_button11"
    >

    <RelativeLayout
        android:id="@+id/rl_address_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/answer_button12"
        >
        <ImageView
            android:id="@+id/iv_address_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/adress_fh"
            android:scaleType="centerInside"
            android:visibility="gone"
            android:layout_marginLeft="11dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adress_xz"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:textColor="#333333"
            />
        <ImageView
            android:id="@+id/iv_address_close"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/adress_gb"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"
            android:layout_marginRight="11dp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_address_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress_hot"
        android:layout_below="@+id/rl_address_title"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/social_gray"
        android:textSize="12sp"
        />
    <LinearLayout
        android:id="@+id/li_address_hot"
        android:layout_below="@+id/tv_address_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
          <TextView
              android:id="@+id/address_hot_1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/adress_hot_7"
              android:layout_marginTop="20dp"
              />
            <TextView
                android:id="@+id/address_hot_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_hot_8"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/address_hot_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_hot_10"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/address_hot_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_hot_1"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/address_hot_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_hot_2"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/address_hot_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_hot_4"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_address_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress_country"
        android:layout_below="@+id/li_address_hot"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/social_gray"
        android:textSize="12sp"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_address_country"
        android:layout_below="@+id/tv_address_2"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
