<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_main_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/iv_pass_fh"
        android:layout_below="@+id/tv_main_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        android:src="@mipmap/login_back"
        />

    <TextView
        android:id="@+id/tv_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pass"
        android:layout_below="@+id/iv_pass_fh"
        android:layout_marginLeft="17dp"
        android:textSize="30sp"
        android:textColor="@color/login_black"
        />
    <RelativeLayout
        android:id="@+id/rl_pass_1"
        android:layout_below="@+id/tv_power"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_pass_y"
            android:textColor="@color/login_black"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/et_oldPassword"
            android:layout_below="@+id/tv_pswd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edtext"
            android:hint="@string/set_pass_addy"
            android:textSize="14sp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pass_2"
        android:layout_below="@+id/rl_pass_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_newpswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_pass_x"
            android:textColor="@color/login_black"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/et_newPassword1"
            android:layout_below="@+id/tv_newpswd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"

            android:background="@drawable/login_edtext"
            android:hint="@string/set_pass_addx"
            android:textSize="14sp"
            android:paddingLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_pass_3"
        android:layout_below="@+id/rl_pass_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_repswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_pass_q"
            android:textColor="@color/login_black"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:id="@+id/et_newPassword2"
            android:layout_width="match_parent"
            android:layout_below="@+id/tv_repswd"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edtext"
            android:hint="@string/set_pass_addq"
            android:textSize="14sp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

    </RelativeLayout>
    <Button
        android:id="@+id/bt_change_esure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_button"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="80dp"
        android:textSize="16sp"
        android:text="@string/equ_dia_esure"
        android:textColor="@color/white"

        />

</RelativeLayout>
