<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <ImageView
        android:id="@+id/regist_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/login_back"
        android:scaleType="centerInside"

        />
    <TextView
        android:id="@+id/tv_regist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/login_tv_regist2"
        android:textColor="#454545"
        android:layout_below="@+id/regist_back"
        android:layout_marginLeft="15dp"

        />
    <ImageView
        android:id="@+id/iv_login_logo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/wj_logo"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="27dp"
        />
    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@mipmap/login_logo"
        android:scaleType="centerInside"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_regist_title"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/et_regist_nick"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/iv_login_logo"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/login_edtext"
        android:hint="@string/regist_et_nick"
        android:paddingLeft="15dp"
        android:textColor="#333333"
        android:textColorHint="#9d9d9d"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/et_regist_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_regist_nick"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/login_edtext"
        android:hint="@string/login_et_user"
        android:paddingLeft="15dp"
        android:textColorHint="#9d9d9d"
        android:textColor="#333333"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/et_regist_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_regist_user"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/login_edtext"
        android:hint="@string/login_et_code"
        android:paddingLeft="15dp"
        android:textColorHint="#9d9d9d"
        android:layout_toLeftOf="@+id/bt_register_code"
        android:textColor="#333333"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bt_register_code"
        android:layout_width="138dp"
        android:layout_height="50dp"
        android:background="#2bdca3"
        android:textColor="@color/white"
        android:text="@string/login_bt_getcode"
        android:layout_alignTop="@+id/et_regist_code"
        android:layout_alignRight="@+id/et_regist_pasw"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/et_regist_pasw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_regist_code"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/login_edtext"
        android:hint="@string/login_et_pass"
        android:paddingLeft="15dp"
        android:textColorHint="#9d9d9d"
        android:textColor="#333333"
        android:textSize="14sp" />


    <Button
        android:id="@+id/bt_regist_ensure"
        android:layout_below="@+id/et_regist_pasw"
        android:layout_marginTop="35dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"
        android:background="@mipmap/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/login_tv_regist"
        />

    <LinearLayout
        android:id="@+id/tv_login_regist"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tv_login_tk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_clause1"
            android:textSize="14sp"
            android:textColor="@color/social_gray"
            />

    </LinearLayout>

</RelativeLayout>
