<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center"
    >
    <TextView
        android:id="@+id/tv_dia_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equ_xq_deltitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="#030303"
        />
    <TextView
        android:id="@+id/et_dia_name"
        android:layout_below="@+id/tv_dia_title"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:textColor="#777777"
        android:text="@string/equ_xq_tistitle"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        />
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/li_button"
        android:background="#f5f5f5"
        />
    <LinearLayout
        android:id="@+id/li_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_dia_qx"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equ_dia_del"
            android:textColor="#B7B7B7"
            android:textSize="17sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#f5f5f5"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_dia_qd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equ_dia_esure"
            android:textSize="17sp"
            android:textColor="@color/nomal_green"
            android:gravity="center"
            />

    </LinearLayout>


</RelativeLayout>
